# fluid-audio-desktop

./: AdvancedEqualizer.cpp  AdvancedEqualizer.h  AlbumArtDownloader.cpp  AlbumArtDownloader.h  AlbumArtWidget.cpp  AlbumArtWidget.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  CNAME  CrossfadeEngine.cpp  CrossfadeEngine.h  LyricsDisplay.cpp  LyricsDisplay.h  MainWindow.cpp  MainWindow.h  MusicDatabase.cpp  MusicDatabase.h  PitchShifter.cpp  PitchShifter.h  README.md  ReplayGain.cpp  ReplayGain.h  SmartPlaylist.cpp  SmartPlaylist.h  SocialSharing.cpp  SocialSharing.h  ThemeManager.cpp  ThemeManager.h  WaveformWidget.cpp  WaveformWidget.h  __init__.py  audio_engine.py  cards_ui.py  fading_stack.py  index.html  main.py  mainwindow.py  native_audio.cpp  privacy.html  (+4 more)
.github/workflows/: build.yml
